week-03: draw static bird and pipes

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flappy Bird Game</title>
     <link rel="stylesheet" href="./flappybird.css" />
+    <script src="flappybird.js" defer></script>
   </head>
   <body>
-    <div class="game-container">
-      <canvas id="game" width="288" height="512"></canvas>
+    <div class="board-container">
+      <canvas id="board" width="360" height="648"></canvas>
     </div>
   </body>
 </html>
